팀 할 일 목록 - 레벨 추가 (수정: 할 일이 없을때도 레벨 조회 가능)